feat: added tests and refactored ErrorRouter to be split